Remove vertical alignment from button class; Fix issue where buttons were causing layout issues.
git-svn-id: https://buddypress.svn.wordpress.org/trunk@4719 cdf35c40-ae34-48e0-9cc9-0c9da1808c22

--- a/bp-themes/bp-default/_inc/css/default.css
+++ b/bp-themes/bp-default/_inc/css/default.css
@@ -1716,7 +1716,6 @@ div.generic-button a,
 	padding: 4px 10px;
 	text-align: center;
 	text-decoration: none;
-	vertical-align: bottom;
 	line-height: 14px;
 }
 button:hover,
